crates/jekko-tui/tests/snapshots/output_pager_snapshots__pager_browse_mode_60x10.snap
---
source: crates/jekko-tui/tests/output_pager_snapshots.rs
expression: render_snapshot(&state)
---
── Pager · 0/8 lines · 0 matches ───────────────────────────
alpha line zero
beta line one with bravo inside
charlie line two
delta line three has bravo too
echo line four
foxtrot line five
golf line six
hotel line seven
